# pyagent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.pyagent/skills/books_search/: SKILL.md
.pyagent/skills/books_search/scripts/: cli.py
.pyagent/skills/housing_market/: SKILL.md
.pyagent/skills/housing_market/scripts/: cli.py
.pyagent/skills/market_indexes/: SKILL.md
.pyagent/skills/market_indexes/scripts/: cli.py
.pyagent/skills/real_estate_listings/: SKILL.md
.pyagent/skills/real_estate_listings/scripts/: cli.py
.pyagent/skills/social_handles/: SKILL.md
.pyagent/skills/social_handles/scripts/: cli.py
.pyagent/skills/social_profile/: SKILL.md
.pyagent/skills/social_profile/scripts/: cli.py
.pyagent/skills/wikipedia_search/: SKILL.md
.pyagent/skills/wikipedia_search/scripts/: cli.py
docs/: architecture.md  cli.md  coding-agent-competitive-analysis.md  configuration.md  design.md  library-usage.md  plugin-brainstorming.md  plugin-competitive-landscape.md  plugin-design.md  plugin-feature-summary.md  plugin-memory-migration.md  plugins.md  skills.md
docs/examples/memory_markdown/: plugin.py
docs/examples/memory_markdown/defaults/: USER.md
examples/: quickstart.py
pyagent/: __init__.py  __main__.py  agent.py  agent_proc.py  bench_cli.py  cancel.py  checklist.py  cli.py  config.py  config_cli.py  paths.py  permissions.py  plugins_cli.py  pricing.py  prompts.py  protocol.py  roles.py  roles_cli.py  session.py  sessions_audit.py  sessions_audit_render.py  sessions_cli.py  skills_cli.py  subagent.py  tool_schema.py  tools.py  venv.py
pyagent/bench/scenarios/: pyagent_self_audit.toml  well_mako.toml
pyagent/defaults/: MEMORY.md  PRIMER.md  SOUL.md  TOOLS.md
pyagent/llms/: __init__.py  anthropic.py  gemini.py  openai.py  pyagent.py
pyagent/plugins/: __init__.py
pyagent/plugins/claude_code_cli/: __init__.py  manifest.toml
pyagent/plugins/code_mapper/: EXTENDING.md  __init__.py  manifest.toml  mapper.py
pyagent/plugins/code_mapper/queries/: bash.scm  bash.toml  c.scm  c.toml  cpp.scm  cpp.toml  css.scm  css.toml  dockerfile.scm  dockerfile.toml  go.scm  go.toml  html.scm  html.toml  java.scm  java.toml  javascript.scm  javascript.toml  json.scm  json.toml  kotlin.scm  kotlin.toml  lua.scm  lua.toml  markdown.scm  markdown.toml  php.scm  php.toml  python.scm  python.toml  ruby.scm  ruby.toml  rust.scm  rust.toml  scala.scm  scala.toml  sql.scm  sql.toml  swift.scm  swift.toml  (+8 more)
pyagent/plugins/doc_tools/: __init__.py  manifest.toml
pyagent/plugins/echo_plugin/: __init__.py  manifest.toml
pyagent/plugins/hn_search/: __init__.py  manifest.toml
pyagent/plugins/html_tools/: __init__.py  extraction.py  manifest.toml
pyagent/plugins/memory/: __init__.py  manifest.toml
pyagent/plugins/memory/defaults/: PROMPT.md
pyagent/plugins/memory_markdown/: __init__.py  manifest.toml
pyagent/plugins/memory_markdown/defaults/: MEMORY.md  PROMPT.md
pyagent/plugins/memory_vector/: __init__.py  manifest.toml
pyagent/plugins/ollama/: __init__.py  client.py  dialects.py  manifest.toml
pyagent/plugins/py_dev_toolkit/: __init__.py  _pathutil.py  lint.py  manifest.toml  pytest_runner.py  python_env.py  typecheck.py
pyagent/plugins/reddit_search/: __init__.py  manifest.toml
pyagent/plugins/strategic_reevaluation/: __init__.py  manifest.toml
pyagent/plugins/web_search/: __init__.py  manifest.toml  search.py
pyagent/roles_bundled/: CLAUDE_CODE.md  MEMORY_CURATOR.md  META_ANALYST.md  PROJECT_MANAGER.md  PYTHON_ENGINEER.md  RESEARCHER.md  REVIEWER.md  SCRIBE.md  SOFTWARE_ENGINEER.md  SUMMARIZER.md  SYSTEMS_ENGINEER.md  __init__.py
pyagent/skills/: __init__.py
pyagent/skills/aviation-weather/: SKILL.md
pyagent/skills/aviation-weather/scripts/: cli.py
pyagent/skills/faa-registry/: SKILL.md
pyagent/skills/faa-registry/scripts/: cli.py
pyagent/skills/flight-tracker/: SKILL.md
pyagent/skills/flight-tracker/scripts/: cli.py
pyagent/skills/pdf-from-markdown/: SKILL.md
pyagent/skills/write-plugin/: SKILL.md
pyagent/skills/write-skill/: SKILL.md
tests/: smoke_agent_label.py  smoke_arg_scrubbing.py  smoke_ask_parent.py  smoke_async_subagent.py  smoke_attachment_lru.py  smoke_auto_venv.py  smoke_background_exec.py  smoke_bench_defaults.py  smoke_call_tool.py  smoke_checklist.py  smoke_claude_code_cli.py  smoke_cli_render.py  smoke_code_mapper.py  smoke_context_window.py  smoke_controlling_hooks.py  smoke_ctrlc.py  smoke_doc_tools.py  smoke_edit_file.py  smoke_glob.py  smoke_grep.py  smoke_hn_search.py  smoke_html_tools.py  smoke_input_queue.py  smoke_kill_active.py  smoke_library_usage.py  smoke_list_models.py  smoke_memory_category_drift.py  smoke_memory_recall_improvements.py  smoke_notify.py  smoke_notify_surface.py  smoke_ollama_plugin.py  smoke_permission_handler.py  smoke_pip_safety.py  smoke_plugin_provider.py  smoke_plugins.py  smoke_prompt_environment.py  smoke_prompt_toolkit.py  smoke_py_dev_toolkit.py  smoke_read_file_ceiling.py  smoke_recursive_subagent.py  (+72 more)
