[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "docstring_parser>=0.16",
    "google-genai>=0.8",
    "markdownify>=0.11",
    "openai>=1.50",
    "petname>=2.6",
    "platformdirs>=4",
    "requests>=2.31",
    "rich>=13",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.10",
]

[project.optional-dependencies]
# Enables the bundled `memory-vector` plugin. fastembed pulls in
# onnxruntime + tokenizers (~150MB on disk) plus a one-time ~130MB
# embedding-model download on first use. Skip if you don't need
# semantic memory recall.
vector = ["fastembed>=0.4"]

[project.scripts]
pyagent = "pyagent.cli:main"
pyagent-config = "pyagent.config_cli:main"
pyagent-skills = "pyagent.skills_cli:main"
pyagent-sessions = "pyagent.sessions_cli:main"
pyagent-plugins = "pyagent.plugins_cli:main"
pyagent-bench = "pyagent.bench_cli:main"
pyagent-roles = "pyagent.roles_cli:main"

[tool.setuptools.packages.find]
include = ["pyagent*"]

[tool.setuptools.package-data]
pyagent = [
    "defaults/*.md",
    "skills/*/SKILL.md",
    "skills/*/*.py",
    # Bundled plugins live under plugins/<name>/. Recursive globs so
    # nested helper modules (embeddings/, etc.) and arbitrary data
    # files (defaults/*.md, schema/*.json, …) all get packaged.
    "plugins/**/manifest.toml",
    "plugins/**/*.py",
    "plugins/**/*.md",
    "plugins/**/*.toml",
    "plugins/**/*.json",
    "plugins/**/*.scm",
    "plugins/**/EXTENDING.md",
    # Bench scenarios.
    "bench/scenarios/*.toml",
    # Bundled role library — one .md per role, parsed at runtime.
    "roles_bundled/*.md",
]
