[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    # DuckDuckGo HTML scraper used by the bundled `web-search` plugin.
    "ddgs>=9",
    "docstring_parser>=0.16",
    # Powers the bundled memory-vector plugin's recall_memory tool.
    # Pulls in onnxruntime + tokenizers (~150MB on disk) plus a
    # one-time ~130MB embedding-model download on first non-empty
    # recall.
    "fastembed>=0.4",
    "google-genai>=0.8",
    "markdownify>=0.11",
    "openai>=1.50",
    "petname>=2.6",
    "platformdirs>=4",
    # CLI input layer — replaces the stdlib readline-backed `input()`
    # so we can keep the prompt alive while the agent is busy (typed
    # input queue, footer redraws, etc.). pure-python, ~250KB.
    "prompt_toolkit>=3.0",
    "requests>=2.31",
    "rich>=13",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.10",
    # Visible-width measurement for the status footer's three-zone
    # layout — Braille spinner and middle-dot separators need accurate
    # widths for the right-zone padding math.
    "wcwidth>=0.2",
]

[project.scripts]
pyagent = "pyagent.cli:main"
pyagent-config = "pyagent.config_cli:main"
pyagent-skills = "pyagent.skills_cli:main"
pyagent-sessions = "pyagent.sessions_cli:main"
pyagent-plugins = "pyagent.plugins_cli:main"
pyagent-bench = "pyagent.bench_cli:main"
pyagent-roles = "pyagent.roles_cli:main"

[tool.setuptools.packages.find]
include = ["pyagent*"]

[tool.setuptools.package-data]
pyagent = [
    "defaults/*.md",
    "skills/*/SKILL.md",
    "skills/*/*.py",
    # Bundled plugins live under plugins/<name>/. Recursive globs so
    # nested helper modules (embeddings/, etc.) and arbitrary data
    # files (defaults/*.md, schema/*.json, …) all get packaged.
    "plugins/**/manifest.toml",
    "plugins/**/*.py",
    "plugins/**/*.md",
    "plugins/**/*.toml",
    "plugins/**/*.json",
    "plugins/**/*.scm",
    "plugins/**/EXTENDING.md",
    # Bench scenarios.
    "bench/scenarios/*.toml",
    # Bundled role library — one .md per role, parsed at runtime.
    "roles_bundled/*.md",
]
