[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagent"
version = "0.1.0"
description = "A Python LLM-agent framework with a plugin system."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Derek Wisong", email = "derekwisong@gmail.com"}]
keywords = ["llm", "agent", "anthropic", "claude", "openai", "gemini", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    # DuckDuckGo HTML scraper used by the bundled `web-search` plugin.
    "ddgs>=9",
    "docstring_parser>=0.16",
    # Powers the bundled memory plugin's recall_memory tool.
    # Pulls in onnxruntime + tokenizers (~150MB on disk) plus a
    # one-time ~130MB embedding-model download on first non-empty
    # recall.
    "fastembed>=0.4",
    "google-genai>=0.8",
    "markdownify>=0.11",
    "openai>=1.50",
    "petname>=2.6",
    "platformdirs>=4",
    # CLI input layer — replaces the stdlib readline-backed `input()`
    # so we can keep the prompt alive while the agent is busy (typed
    # input queue, footer redraws, etc.). pure-python, ~250KB.
    "prompt_toolkit>=3.0",
    "requests>=2.31",
    "rich>=13",
    "tree-sitter>=0.25",
    # 1.x switched to a download-on-demand model (only ~8 languages
    # bundled; rest fetch from the internet at first get_language()).
    # That hangs offline / in restricted CI. Stay on 0.x until upstream
    # offers an opt-out.
    "tree-sitter-language-pack>=0.10,<1.0",
    # Visible-width measurement for the status footer's three-zone
    # layout — Braille spinner and middle-dot separators need accurate
    # widths for the right-zone padding math.
    "wcwidth>=0.2",
]

[project.urls]
Homepage = "https://github.com/derekwisong/pyagent"
Repository = "https://github.com/derekwisong/pyagent"
Issues = "https://github.com/derekwisong/pyagent/issues"

[project.optional-dependencies]
dev = [
    "black>=24",
    "ruff>=0.6",
    "pre-commit>=3",
    # Required by the py-dev-toolkit plugin's run_pytest tool, which
    # one of the tests exercises. Not a runtime dep.
    "pytest>=7",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear (real bugs / smells)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "RET",  # flake8-return
    "PIE",  # flake8-pie
]
ignore = [
    "E501",   # line length — black handles this
    "B008",   # function call in default arg — common Click/Typer pattern
    "SIM105", # try/except/pass is often clearer than contextlib.suppress
    "SIM108", # ternary not always clearer than if/else
]

[tool.ruff.lint.per-file-ignores]
# Tests can be looser: unused imports/vars and lambda binds are common
# in stub-heavy tests.
"tests/*" = [
    "F401",   # unused-import
    "F811",   # redefined-while-unused
    "F841",   # unused-variable
    "B007",   # unused loop control var
    "B904",   # raise without `from` inside except
    "E731",   # lambda assignment
    "E741",   # ambiguous variable name
    "SIM117", # nested with statements
]

[project.scripts]
pyagent = "pyagent.cli:main"
pyagent-config = "pyagent.config_cli:main"
pyagent-skills = "pyagent.skills_cli:main"
pyagent-sessions = "pyagent.sessions_cli:main"
pyagent-plugins = "pyagent.plugins_cli:main"
pyagent-bench = "pyagent.bench_cli:main"
pyagent-roles = "pyagent.roles_cli:main"

[tool.setuptools.packages.find]
include = ["pyagent*"]

[tool.setuptools.package-data]
pyagent = [
    "defaults/*.md",
    "skills/*/SKILL.md",
    "skills/*/*.py",
    # Bundled plugins live under plugins/<name>/. Recursive globs so
    # nested helper modules (embeddings/, etc.) and arbitrary data
    # files (defaults/*.md, schema/*.json, …) all get packaged.
    "plugins/**/manifest.toml",
    "plugins/**/*.py",
    "plugins/**/*.md",
    "plugins/**/*.toml",
    "plugins/**/*.json",
    "plugins/**/*.scm",
    "plugins/**/EXTENDING.md",
    # Bench scenarios.
    "bench/scenarios/*.toml",
    # Bundled role library — one .md per role, parsed at runtime.
    "roles_bundled/*.md",
]
